[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Andrew Green <agreen@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.19.3"
langchain = "^0.0.302"
umap-learn = "^0.5.4"
requests = "^2.31.0"
lxml = "^4.9.3"
sentence-transformers = "^2.2.2"
tiktoken = "^0.5.1"
faiss-cpu = "^1.7.4"
flagembedding = "^1.1.1"
protobuf = "^4.24.3"
gradio = "^3.45.1"
llama-cpp-python = "^0.2.7"
click = "^8.1.7"
furl = "^2.1.3"
lmql = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
