[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Andrew Green <agreen@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.19.3"
umap-learn = "^0.5.4"
requests = "^2.31.0"
lxml = "^4.9.3"
click = "^8.1.7"
furl = "^2.1.3"
lmql = "^0.7.3"
tiktoken = "^0.5.1"
transformers = "^4.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
